# SlavicPersuasionTechniques

./: LICENSE  README.md  binary_persuasion_detection.sh  multilabel_persuasion_classification.sh  pyproject.toml
notebooks/: LREC_topic_visualisations.ipynb  data_preparation.ipynb
prompts/: binary_persuasion_strategies_detection.yaml  multilabel_classification.yaml
src/: persuasion_classification.py
src/utils/: utils.py
